--- a/Transporte/app/Dockerfile
+++ b/Transporte/app/Dockerfile
@@ -2,6 +2,7 @@
 # CMD ["python", "Server.py", "172.17.0.1:5000", "app\Server:app"]
 
 # set base image (host OS)
+
 # FROM python:3.9-slim
 
 FROM alpine:3.10
@@ -15,10 +16,12 @@ COPY requirements.txt .
 RUN apk add --no-cache python3-dev && pip3 install --upgrade pip
 
 # install dependencies
-RUN pip install -r requirements.txt
+# RUN pip install -r requirements.txt
+RUN pip3 --no-cache-dir install -r "./requirements.txt"
 
 # RUN apt install ffmpeg
 RUN apk add --no-cache ffmpeg
+
 
 # copy the content of the local src directory to the working directory
 COPY . .
@@ -26,4 +29,4 @@ COPY . .
 EXPOSE 5052
 
 # command to run on container start
-ENTRYPOINT [ "python", "./Server.py" ]
+CMD [ "python", "Server.py" ]
